2005-04-12 Patrick Galbraith <patg@mysql.com> (2.9007)
        * Fix to Statement.pm for old API call for numfields that caused
          warnings on 40numrows and akmisc tests
        * Fix to warning - t/40listfields to check logic properly 
        * Fix to bind_ph to throw an error if trying to bind a non-numeric 
          value as numeric
        * Better fix for dealing with error condition in $sth->rows()

2005-04-04 Rudolf Lippan <rlippan@remotelinux.com> (2.9006)
	* Fixed a bug in mysql_auto_reconnect whereby only the fist reconnect 
	  would take place. The setting of mysql_auto_reconnect was getting 
	  reset to the default of false during the reconnect.
        * Fixed a bug with AutoCommit that manifested itself when you would
          start the database with autocommit turned off (with my.cnf
          init-connect    = 'set autocommit=0'), setting AutoCommit in
          connect with { AutoConnect => 1 } would not work, nor setting it
          via $dbh->{AutoCommit}=1 work. Also added logic which uses the
          mysql client API functions for rollback and commit if the server
          version is 4.1.0 and above, old version logic cleaned up as well
          and still functional.  [Patrick Galbraith <patg@mysql.com>]
        * Found that mysql_internal_execute needed to return a type of
          my_longlong, which caused type warnings and still resulted in the 
          fix described in 2.9005_4 not working.
	  [Patrick Galbraith <patg@mysql.com>]
        * Various type cast warnings fixed [Patrick Galbraith <patg@mysql.com>]
        * Fix for rows - changed num_rows to my_ulonglong in dbdimp.h and
          how the buffer that contains the value returned from
          mysql_affected_rows is printed to from %lu to %lli if an error
          (-1) and %llu otherwise. This will now allow the number from rows
          to be able to be the maximum that mysql_affected_rows is able to