@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>INSTALL - How to install and configure DBD::mysql</title>
-<link rev="made" href="mailto:root@hampsten.nonet" />
+<link rev="made" href="mailto:feedback@suse.de" />
 </head>
 
 <body style="background-color: white">
