@@ -1,6 +1,7 @@
+# http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      2.9007
+version:      2.9008
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
@@ -8,4 +9,4 @@ requires:
     DBI:                           1.08
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.12
+generated_by: ExtUtils::MakeMaker version 6.17
